[metadata]
name = dolib
url = https://github.com/geraxe/dolib
license = MIT
author = Yury Balandin
author_email = yuri@balandin.ru
description = Python library for awesome Digital Ocean API
long_description = file: README.md
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development
    Topic :: Software Development :: Libraries

[options]
python_requires = >=3.5
packages = find:
zip_safe = false
install_requires =
    pydantic[email]
    requests

[options.packages.find]
exclude = tests

[options.extras_require]
testing =
    pytest
    pytest-recording
coverage = pytest-cov

[bdist_wheel]
universal = 1

[tool:pytest]
norecursedirs = .* build dist venv test_data
testpaths = tests
filterwarnings =
    ignore::PendingDeprecationWarning:pip\._vendor.+
    ignore::DeprecationWarning:pip\._vendor.+
markers =
    network: mark tests that require internet access

[mypy]
python_version = 3.6
ignore_missing_imports = True
disallow_incomplete_defs = True
disallow_untyped_calls = True
disallow_untyped_defs = True
strict_optional = False

[flake8]
statistics = true
max-line-length = 88
exclude = .git, __pycache__ 
