[metadata]
name = dolib
description = Python library for awesome Digital Ocean API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/geraxe/dolib
author = Yury Balandin
author_email = yuri@balandin.ru
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development
    Topic :: Software Development :: Libraries

[options]
packages = find:
install_requires =
    httpx
    pydantic[email]
    requests
python_requires = >=3.6
setup_requires =
    setuptools-scm
zip_safe = false

[options.packages.find]
exclude = tests

[options.extras_require]
testing =
    pytest
    pytest-cov
    pytest-recording

[bdist_wheel]
universal = 1

[tool:pytest]
norecursedirs = .* build dist venv test_data
testpaths = tests

[mypy]
ignore_missing_imports = True
disallow_incomplete_defs = True
disallow_untyped_calls = True
disallow_untyped_defs = True
strict_optional = False

[flake8]
statistics = true
max-line-length = 88
exclude = .git, __pycache__

[coverage:run]
branch = True
source = .

[coverage:report]
include =
    dolib/*
    tests/*
